@@ -16,12 +16,16 @@
 
 package org.wetator.commandset;
 
+import static org.wetator.core.ParameterDescriptor.optional;
+import static org.wetator.core.ParameterDescriptor.required;
+
 import java.io.File;
 import java.lang.reflect.InvocationTargetException;
 import java.lang.reflect.Method;
 import java.lang.reflect.Modifier;
 import java.net.MalformedURLException;
 import java.net.URL;
+import java.util.Arrays;
 import java.util.List;
 import java.util.Locale;
 import java.util.Properties;
@@ -44,9 +48,6 @@ import org.wetator.backend.htmlunit.HtmlUnitBrowser;
 import org.wetator.core.Command;
 import org.wetator.core.ForceExecution;
 import org.wetator.core.ICommandImplementation;
-import static org.wetator.core.ParameterDescriptor.optional;
-import static org.wetator.core.ParameterDescriptor.required;
-
 import org.wetator.core.ParameterDescriptor.ParameterType;
 import org.wetator.core.Variable;
 import org.wetator.core.WetatorContext;
@@ -73,84 +74,100 @@ public final class DefaultCommandSet extends AbstractCommandSet {
 
   @Override
   protected void registerCommands() {
+    // @formatter:off
     registerCommand("describe", new CommandDescribe(),
-        List.of(required(0, "text", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "text", ParameterType.STRING)),
         "Adds a description/comment to the test output.");
 
     registerCommand("open-url", new CommandOpenUrl(),
-        List.of(required(0, "url", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "url", ParameterType.STRING)),
         "Opens the given URL in the browser.");
     registerCommand("use-module", new CommandUseModule(),
-        List.of(
+        Arrays.asList(
             required(0, "module-file", ParameterType.STRING),
             optional(1, "parameters", ParameterType.MULTI)),
         "Executes the commands from the referenced module file.");
     registerCommand("close-window", new CommandCloseWindow(),
-        List.of(),
+        Arrays.asList(),
         "Closes the current browser window/tab.");
     registerCommand("go-back", new CommandGoBack(),
-        List.of(),
+        Arrays.asList(),
         "Navigates back in browser history.");
 
     registerCommand("click-on", new CommandClickOn(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Clicks on the control identified by the WPath.");
     registerCommand("click-double-on", new CommandClickDoubleOn(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Double-clicks on the control identified by the WPath.");
     registerCommand("click-right-on", new CommandClickRightOn(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Right-clicks on the control identified by the WPath.");
     registerCommand("set", new CommandSet(),
-        List.of(
+        Arrays.asList(
             required(0, "wpath", ParameterType.STRING),
             required(1, "value", ParameterType.STRING)),
         "Sets the value of the control identified by the WPath.");
     registerCommand("select", new CommandSelect(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Selects the option/checkbox identified by the WPath.");
     registerCommand("deselect", new CommandDeselect(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Deselects the option/checkbox identified by the WPath.");
 
     registerCommand("mouse-over", new CommandMouseOver(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Moves the mouse over the control identified by the WPath.");
     registerCommand("confirm-next", new CommandConfirmNext(),
-        List.of(required(0, "action", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "action", ParameterType.STRING)),
         "Defines the action (ok/cancel) for the next browser dialog.");
 
     registerCommand("assert-title", new CommandAssertTitle(),
-        List.of(
+        Arrays.asList(
             required(0, "pattern", ParameterType.STRING),
             optional(1, "timeout", ParameterType.LONG)),
         "Asserts the page title matches the expected pattern.");
     registerCommand("assert-content", new CommandAssertContent(),
-        List.of(
+        Arrays.asList(
             required(0, "pattern", ParameterType.STRING),
             optional(1, "timeout", ParameterType.LONG)),
         "Asserts the page content matches the expected pattern.");
     registerCommand("assert-enabled", new CommandAssertEnabled(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Asserts the control is enabled.");
     registerCommand("assert-disabled", new CommandAssertDisabled(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Asserts the control is disabled.");
     registerCommand("assert-set", new CommandAssertSet(),
-        List.of(
+        Arrays.asList(
             required(0, "wpath", ParameterType.STRING),
             required(1, "expected-value", ParameterType.STRING)),
         "Asserts the control's value matches the expected value.");
     registerCommand("assert-selected", new CommandAssertSelected(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Asserts the option/checkbox is selected.");
     registerCommand("assert-deselected", new CommandAssertDeselected(),
-        List.of(required(0, "wpath", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "wpath", ParameterType.STRING)),
         "Asserts the option/checkbox is not selected.");
 
     registerCommand("exec-java", new CommandExecJava(),
-        List.of(required(0, "class-and-method", ParameterType.STRING)),
+        Arrays.asList(
+            required(0, "class-and-method", ParameterType.STRING)),
         "Executes a Java method via reflection.");
+    // @formatter:on
   }
 
   /**
